<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.vu.isis.serviceparcelableexasync2.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/weather_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name_string" />

    <TextView
        android:id="@+id/weather_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/weather_name"
        android:text="@string/speed_string" />

    <TextView
        android:id="@+id/weather_deg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/weather_speed"
        android:text="@string/deg_string" />

    <TextView
        android:id="@+id/weather_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/weather_deg"
        android:text="@string/temp_string" />

    <TextView
        android:id="@+id/weather_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="2dp"
        android:layout_toRightOf="@+id/weather_temp"
        android:text="@string/humidity_string" />

    <TextView
        android:id="@+id/weather_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/weather_humidity"
        android:text="@string/sunrise_string" />

    <TextView
        android:id="@+id/weather_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:layout_toRightOf="@+id/weather_sunrise"
        android:text="@string/sunset_string" />


</RelativeLayout>
